# lifeoc-event-watch

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  package.json  serverless.yml
src/: event.rs  events_api.rs  main.rs  parser.rs  prompt.rs  result.rs
