[package]
name = "lifeoc-event-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chat-gpt-rs = "1.4.0"
chrono = "0.4.24"
dotenv = "0.15.0"
futures = "0.3.28"
lambda_http = "0.8.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["rt"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
